    - new options "starSize" and "starNudge_y" to control size and positioning of confounding status asterisks/circles
    - metavariables can be split into separate groups by adding a "grounpingVar" columns to metaDeconfOutput.
      - this is done by default when mediationMat is supplied to MetaDeconfound()
      - uses facet_grid(), so output can be tweaked using "+ theme(strip.XXX)" options

Version 1.0.3
  - implementation of new funtion GetPartialEfSizes()
    - adds partial R-squared as additional effect size metric
    - new output column "partial": additional variance of a feature explained by
      adding a metavariable to a linear (mixed effects) model containing all
      other metavariables associated to the feature
    - new output column "partialRel": proportion of explainable variance of a feature tracable to a metavariable
      (e.g. partialRel = 0.5 --> metavariable x can explain 50% of all explainable variance of fature y -- all other metavariables significantly associated to feature y can explain the remaining 50% of overall explainable variance of fature y)
    - new output column "PartialNorm": proportion of explained variance of a metavariable set in relation to maximally explainable variance (i.e. variance not explainable by all other metavariables)
  - bug fix of bug disabling computation of confidence intervalls of lrts
  - implementaion of truly linear computation mode when nnodes = 1
  - additional test to filter out non trustworthy lrts in some scenarios with highly colinear metavariables
  - stricter tests for complete separaion when glms are computed

  - BuildHeatmap()
    - added "plotPartial" argument to choose between
      - "marginal": plotting naive/marginal effect sizes based on CLiff's Delta/Spearman's Rho
      - "partial": plotting signed partial R-squared, including an additional column showing the total explainable variance per feature