@@ -1,5 +1,6 @@
 # Generated by roxygen2: do not edit by hand
 
+export(BuildConfounderMap)
 export(BuildHeatmap)
 export(GetPartialEfSizes)
 export(ImportLongPrior)
@@ -8,12 +9,38 @@ import(detectseparation)
 import(foreach)
 import(futile.logger)
 import(ggplot2)
+import(ggraph)
+import(igraph)
 import(lme4)
 import(lmtest)
-import(stats)
+import(magrittr)
+importFrom(circlize,colorRamp2)
+importFrom(dplyr,filter)
+importFrom(dplyr,mutate)
+importFrom(dplyr,pull)
 importFrom(foreach,"%dopar%")
+importFrom(ggraph,guide_edge_colourbar)
+importFrom(ggraph,scale_edge_colour_gradientn)
 importFrom(lmtest,lrtest)
 importFrom(methods,is)
 importFrom(reshape2,dcast)
 importFrom(reshape2,melt)
 importFrom(rlang,.data)
+importFrom(scales,rescale)
+importFrom(stats,as.formula)
+importFrom(stats,complete.cases)
+importFrom(stats,confint)
+importFrom(stats,cor.test)
+importFrom(stats,dist)
+importFrom(stats,glm)
+importFrom(stats,hclust)
+importFrom(stats,kruskal.test)
+importFrom(stats,lm)
+importFrom(stats,median)
+importFrom(stats,na.exclude)
+importFrom(stats,na.omit)
+importFrom(stats,p.adjust)
+importFrom(stats,setNames)
+importFrom(stats,update)
+importFrom(stats,var)
+importFrom(stats,wilcox.test)
