@@ -20,6 +20,12 @@ Version 1.0.4
       - this is done by default when mediationMat is supplied to MetaDeconfound()
       - uses facet_grid(), so output can be tweaked using "+ theme(strip.XXX)" options
 
+  - BuildConfounderMap()
+    - new plot generating function
+    - for each feature it creates a circos plot of confounder-confounded relations between metavariables associated to this feature.
+    - returns a list of ggraph ggplot2 plots
+    - ggraph package must be loaded for plotting elements of the returned list.
+
 Version 1.0.3
   - implementation of new funtion GetPartialEfSizes()
     - adds partial R-squared as additional effect size metric
